Implement POST method for tableUpload.

--- a/views/templates/tableUpload.html
+++ b/views/templates/tableUpload.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<h1> Table Upload </h1>
-		<form>
+		<form method="POST" enctype="multipart/form-data">
 		  <table border="1">
 		    <tr>  
 		      <td> TableUpload </td>
