--- a/views/templates/tableUpload.html
+++ b/views/templates/tableUpload.html
@@ -3,13 +3,37 @@
 		<h1> Table Upload </h1>
 		<form method="POST" enctype="multipart/form-data">
 		  <table border="1">
+            <tr>
+              <th> Title </th>
+              <td>
+                <input type="text" name="title">
+              </td>
+            </tr>
+
+            <tr>
+              <th> Date </th>
+              <td>
+                <input type="date" name="date">
+              </td>
+            </tr>
+
+            <tr>
+              <th> Description </th>
+              <td>
+                <textarea name="description" cols="40" rows="5">
+                </textarea>
+              </td>
+            </tr>
+
 		    <tr>  
-		      <td> TableUpload </td>
+		      <th> TableUpload </th>
 		      <td> 
 		          <input type="file" name="tables" multiple>
-		        </form>
 		      </td>
-		      <td>
+		    </tr>
+
+            <tr>
+		      <td align="center" colspan="2">
 		          <input type="submit">
 		      </td>
 		    </tr>
